[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/screens/pause_screen.gd" type="Script" id=1]
[ext_resource path="res://ui/screens/screen.tscn" type="PackedScene" id=2]

[node name="PauseScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Interface" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Title" parent="Interface" index="0"]
text = "Game Paused"

[node name="Menu" parent="Interface" index="1"]
margin_left = -35.0
margin_top = -26.0
margin_right = 35.0
margin_bottom = 26.0

[node name="ResumeButton" type="Button" parent="Interface/Menu" index="0"]
margin_right = 70.0
margin_bottom = 24.0
text = "Resume"

[node name="QuitButton" type="Button" parent="Interface/Menu" index="1"]
margin_top = 28.0
margin_right = 70.0
margin_bottom = 52.0
text = "Quit"

[connection signal="pressed" from="Interface/Menu/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Interface/Menu/QuitButton" to="." method="_on_QuitButton_pressed"]

[editable path="Interface"]
